# 298_project

./: EKF_states_accel_basis_cda.py  Plotting_tool.py  Post_process_data_tool.py  UKF_state_Velocity_Cda.py  UKF_state_Velocity_Cda_Bias.py  data_compressor.py  data_processing.py  filtered_data_up_19_WE.csv  main.py  master_data_set.csv  pyproject.toml  requirements.txt  sample_plotting.py  ukf_estimation.py  utils.py
Archive/: EKF_states_accel_basis_cda.py  Test_matrix.xlsx  data_compressor.py  master_data_set.csv  pyproject.toml  sample_plotting.py
Archive/Garmin_CSV_files/: pos_drop_vel_13_EW.csv  pos_drop_vel_13_WE.csv  pos_drop_vel_19_WE.csv  pos_mix_vel_13_EW.csv  pos_mix_vel_13_WE.csv  pos_mix_vel_19_WE.csv  pos_up_vel_19_EW.csv
Archive/Garmin_Fit_files/: pos_drop_vel_13_WE.fit  pos_mix_vel_13_WE.fit  (+4 more)
Garmin_CSV_files/: pos_drop_vel_19_EW.csv  pos_mix_vel_19_EW.csv  pos_up_vel_13_EW.csv  pos_up_vel_13_WE.csv  pos_up_vel_19_WE.csv
Garmin_Fit_files/: pos_drop_vel_13_EW.fit  pos_drop_vel_19_EW.fit  pos_drop_vel_19_WE.fit  pos_mix_vel_13_EW.fit  pos_mix_vel_19_EW.fit  pos_up_vel_13_WE.fit
Iphone_CSV_files/: pos_drop_vel_13_EW.csv  pos_drop_vel_19_EW.csv  pos_mix_vel_13_WE.csv
Optimisation_results/: optimisation_results_001_06_01_2025_805m.csv  optimisation_results_003_06_01_2025_805m.csv
UKF_estimated_results/: ukf_estimated_results_001_06_01_2025_805m.csv  ukf_estimated_results_003_06_01_2025_805m.csv
Wind_sensor_data/: pos_drop_vel_13_WE.CSV  pos_drop_vel_19_EW.CSV  pos_drop_vel_19_WE.CSV  pos_mix_vel_13_EW.CSV  pos_up_vel_13_WE.CSV
(+334 files in other folders)
