[project]
name = "mae298-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipdb>=0.13.13",
    "ipython>=9.2.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "polars>=1.30.0",
    "ruff>=0.11.11",
    "scipy>=1.15.3",
]
